--- a/src/App.css
+++ b/src/App.css
@@ -93,3 +93,19 @@ select{
   font-weight: 600;
   font-size: 18px;
 }
+@media screen and (max-width:767px){
+  form div{
+  display:flex;
+  flex-direction: column;
+  gap:20px;
+  align-items: center;
+  justify-content:space-between;
+  width: 100%;
+}
+  select{
+    width: 100%;
+    height: 40px;
+    padding: 0px 10px;
+    border-radius: 4px;
+  }
+}
